--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   },
   "homepage": "https://github.com/Flipkart/recyclerlistview",
   "dependencies": {
+    "@types/lodash.throttle": "^4.1.9",
     "lodash.debounce": "4.0.8",
+    "lodash.throttle": "^4.1.1",
     "prop-types": "15.8.1",
     "ts-object-utils": "0.0.5"
   },
@@ -45,8 +47,8 @@
   "devDependencies": {
     "@types/lodash.debounce": "4.0.3",
     "@types/prop-types": "15.5.2",
-    "@types/react-native": "0.49.5",
     "@types/react": "16.4.7",
+    "@types/react-native": "0.49.5",
     "@types/resize-observer-browser": "^0.1.7",
     "file-directives": "1.4.6",
     "tslint": "5.11.0",
