--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
   "devDependencies": {
     "@types/lodash.debounce": "4.0.3",
     "@types/prop-types": "15.5.2",
-    "@types/react": "16.4.7",
-    "@types/react-native": "0.49.5",
+    "@types/react": "^18.3.1",
+    "@types/react-native": "^0.73.0",
     "@types/resize-observer-browser": "^0.1.7",
     "file-directives": "1.4.6",
     "tslint": "5.11.0",
-    "typescript": "3.3.1"
+    "typescript": "^5.4.5"
   }
 }
