--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recyclerlistview",
+  "name": "@irisjae/recyclerlistview",
   "version": "4.2.0",
   "description": "The listview that you need and deserve. It was built for performance, uses cell recycling to achieve smooth scrolling.",
   "main": "dist/reactnative/index.js",
@@ -25,7 +25,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Flipkart/recyclerlistview"
+    "url": "https://github.com/irisjae/recyclerlistview"
   },
   "author": "naqvitalha <naqvitalha@gmail.com>",
   "license": "Apache-2.0",
